--- a/docs/mainstyle.css
+++ b/docs/mainstyle.css
@@ -28,3 +28,9 @@ p {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
 }
+
+a {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+}
